# gr_papyrus

./: CMakeLists.txt  README
apps/: CMakeLists.txt  benchmark_ofdm_rx.py  benchmark_ofdm_tx.py  receive_path.py  sensing_path.py  ssma.py  transmit_path.py  uhd_interface.py
apps/traffic/.svn/: all-wcprops  entries
cmake/Modules/: GrPapyrusGengen.cmake
include/: CMakeLists.txt
include/gr_papyrus/: CMakeLists.txt  gr_papyrus_api.h  gr_papyrus_ofdm_frame_acquisition.h  gr_papyrus_ofdm_frame_sink.h  gr_papyrus_ofdm_insert_preamble.h  gr_papyrus_ofdm_mapper_bcv.h  gr_papyrus_ofdm_sampler.h  gr_papyrus_peak_detector_XX.h.t  gr_papyrus_sample_and_hold_XX.h.t
lib/: CMakeLists.txt  gr_papyrus_ofdm_frame_acquisition.cc  gr_papyrus_ofdm_frame_sink.cc  gr_papyrus_ofdm_insert_preamble.cc  gr_papyrus_ofdm_mapper_bcv.cc  gr_papyrus_ofdm_sampler.cc  gr_papyrus_peak_detector_XX.cc.t  gr_papyrus_sample_and_hold_XX.cc.t
python/: CMakeLists.txt  __init__.py  build_utils.py  ncofdm_filter.py  ofdm.py  ofdm_receiver.py  ofdm_sync_pn.py
swig/: CMakeLists.txt  gr_papyrus_peak_detector_XX.i.t  gr_papyrus_sample_and_hold_XX.i.t  gr_papyrus_swig.i
